--- a/locale/tr_TR/LC_MESSAGES/messages.po
+++ b/locale/tr_TR/LC_MESSAGES/messages.po
@@ -9205,15 +9205,15 @@ msgstr "Bu grup henüz hiçbir bölgeye sahip değil."
 
 #: templates/modern/manage_group_zones.html:113
 msgid "Master"
-msgstr "Master"
+msgstr "Ana"
 
 #: templates/modern/manage_group_zones.html:115
 msgid "Slave"
-msgstr "Slave"
+msgstr "Bağımlı"
 
 #: templates/modern/manage_group_zones.html:117
 msgid "Native"
-msgstr "Native"
+msgstr "Yerel"
 
 #: templates/default/edit_group.html:182 templates/modern/edit_group.html:182
 msgid "Confirm Member Removal"
